# dx11-bug-repro

./: Cargo.toml
shaders/: color.frag  color.frag.spv
src/: main.rs
