[package]
name = "dx11-bug-repro"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
renderdoc = "0.9"
pollster = "0.2.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git" }
wgpu-subscriber = "0.1"

[patch.crates-io]
gfx-hal = { version = "0.6", path = "../gfx/src/hal" }
#gfx-backend-empty = { version = "0.6", path = "../gfx/src/backend/empty" }
gfx-backend-vulkan = { version = "0.6", path = "../gfx/src/backend/vulkan" }
gfx-backend-dx12 = { version = "0.6", path = "../gfx/src/backend/dx12" }
gfx-backend-dx11 = { version = "0.6", path = "../gfx/src/backend/dx11" }
gfx-auxil = { version = "0.7", path = "../gfx/src/auxil/auxil" }
#gfx-backend-metal = { version = "0.6", path = "../gfx/src/backend/metal" }